force-app/main/default/objects/Matter_Charge_Details__c/Matter_Charge_Details__c.object-meta.xml
<CustomObject>
    <label>Matter Charge Details</label>
    <nameField>
        <label>Charge Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matter Charge Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>