force-app/main/default/objects/Matter_Charge_Details__c/fields/Amount_of_Fine__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Fine__c</fullName>
    <label>Amount of Fine</label>
    <length>100</length>
    <type>Text</type>
</CustomField>