force-app/main/default/objects/Matter_Charge_Details__c/fields/Bond_to_be_Posted_on__c.field-meta.xml
<CustomField>
    <fullName>Bond_to_be_Posted_on__c</fullName>
    <label>Bond to be Posted on</label>
    <type>Date</type>
</CustomField>