force-app/main/default/objects/Matter_Charge_Details__c/fields/Charge_Count__c.field-meta.xml
<CustomField>
    <fullName>Charge_Count__c</fullName>
    <label>Charge Count</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>