force-app/main/default/objects/Matter_Charge_Details__c/fields/Charge_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Charge_Outcome__c</fullName>
    <label>Charge Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Court_Disposition__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Probation (SUPERVISED)</fullName>
            </value>
            <value>
                <fullName>Jail</fullName>
            </value>
            <value>
                <fullName>Prison</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Restitution</fullName>
            </value>
            <value>
                <fullName>Community Service</fullName>
            </value>
            <value>
                <fullName>&quot;No Animal&quot; Order</fullName>
            </value>
            <value>
                <fullName>Probation (UNSUPERVISED)</fullName>
            </value>
            <value>
                <fullName>Psychological Counseling</fullName>
            </value>
            <value>
                <fullName>Other (Describe in Notes Section)</fullName>
            </value>
            <value>
                <fullName>Supervised Release</fullName>
            </value>
            <value>
                <fullName>Drug/Alcohol Counseling</fullName>
            </value>
            <value>
                <fullName>Home Confinement/House Arrest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>