force-app/main/default/objects/Matter_Charge_Details__c/fields/Charge_s_Closed__c.field-meta.xml
<CustomField>
    <fullName>Charge_s_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge(s) Closed</label>
    <type>Checkbox</type>
</CustomField>