force-app/main/default/objects/Matter_Charge_Details__c/fields/Charge_s_Filed__c.field-meta.xml
<CustomField>
    <fullName>Charge_s_Filed__c</fullName>
    <label>Charge(s) Filed</label>
    <required>true</required>
    <type>Date</type>
</CustomField>