force-app/main/default/objects/Matter_Charge_Details__c/fields/Charges_Dismissed__c.field-meta.xml
<CustomField>
    <fullName>Charges_Dismissed__c</fullName>
    <label>Charges Dismissed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>