force-app/main/default/objects/Matter_Charge_Details__c/fields/Civil_Court_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Civil_Court_Jurisdiction__c</fullName>
    <label>Civil Court Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magistrate/Town</fullName>
            </value>
            <value>
                <fullName>State/District</fullName>
            </value>
            <value>
                <fullName>Federal District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>