force-app/main/default/objects/Matter_Charge_Details__c/fields/Civil_Hearing_Type__c.field-meta.xml
<CustomField>
    <fullName>Civil_Hearing_Type__c</fullName>
    <label>Civil Hearing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond Hearing</fullName>
            </value>
            <value>
                <fullName>Forfeiture Hearing</fullName>
            </value>
            <value>
                <fullName>Fitness Hearing</fullName>
            </value>
            <value>
                <fullName>Disposition Hearing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>