force-app/main/default/objects/Matter_Charge_Details__c/fields/Court_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Court_Disposition__c</fullName>
    <label>Court Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Court_Disposition</valueSetName>
    </valueSet>
</CustomField>