force-app/main/default/objects/Matter_Charge_Details__c/fields/Court_Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Disposition_Date__c</fullName>
    <label>Court Disposition Date</label>
    <type>Date</type>
</CustomField>