force-app/main/default/objects/Matter_Charge_Details__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Matter_Charge_Information</relationshipName>
    <type>Lookup</type>
</CustomField>