force-app/main/default/objects/Matter_Charge_Details__c/fields/FIR_Case__c.field-meta.xml
<CustomField>
    <fullName>FIR_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FIR Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Matter Charge Details</relationshipLabel>
    <relationshipName>Matter_Charge_Details</relationshipName>
    <type>Lookup</type>
</CustomField>