force-app/main/default/objects/Matter_Charge_Details__c/fields/Forfeiture_Date__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Date__c</fullName>
    <label>Forfeiture Date</label>
    <type>Date</type>
</CustomField>