force-app/main/default/objects/Matter_Charge_Details__c/fields/Legal_Advocacy_Matter__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advocacy_Matter__c</fullName>
    <label>Legal Advocacy Matter</label>
    <referenceTo>Legal_Advocacy_Matter__c</referenceTo>
    <relationshipName>Matter_Charge_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>