force-app/main/default/objects/Matter_Charge_Details__c/fields/Length_of_No_Animal_Order__c.field-meta.xml
<CustomField>
    <fullName>Length_of_No_Animal_Order__c</fullName>
    <label>Length of No Animal Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>