force-app/main/default/objects/Matter_Charge_Details__c/fields/Length_of_Probation__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Probation__c</fullName>
    <label>Length of Probation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>