force-app/main/default/objects/Matter_Charge_Details__c/fields/Non_Animal_Related__c.field-meta.xml
<CustomField>
    <fullName>Non_Animal_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Animal Related</label>
    <type>Checkbox</type>
</CustomField>