force-app/main/default/objects/Matter_Charge_Details__c/fields/Petition_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Petition_Hearing_Date__c</fullName>
    <label>Petition Hearing Date</label>
    <type>Date</type>
</CustomField>