force-app/main/default/objects/Matter_Charge_Details__c/fields/Petition_Hearing_Details__c.field-meta.xml
<CustomField>
    <fullName>Petition_Hearing_Details__c</fullName>
    <label>Petition Hearing Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>