force-app/main/default/objects/Matter_Charge_Details__c/fields/Petition_Type__c.field-meta.xml
<CustomField>
    <fullName>Petition_Type__c</fullName>
    <label>Petition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>