force-app/main/default/objects/Matter_Charge_Details__c/fields/Restitution_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Hearing__c</fullName>
    <label>Restitution Hearing</label>
    <type>Date</type>
</CustomField>