force-app/main/default/objects/Matter_Charge_Details__c/fields/Restitution_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Ordered__c</fullName>
    <label>Restitution Ordered</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>