force-app/main/default/objects/Matter_Charge_Details__c/fields/Statute__c.field-meta.xml
<CustomField>
    <fullName>Statute__c</fullName>
    <label>Statute #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>